--- a/compare_packages.ipynb
+++ b/compare_packages.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -97,6 +97,7 @@
     "\n",
     "packages = ['nbodykit','treecorr','corrfunc']\n",
     "lss = ['-', '--', ':']\n",
+    "nmult = 50\n",
     "\n",
     "for gtype, c in zip(['bright','faint'],['b','r']):\n",
     "    for package,ls in zip(packages,lss):\n",
