--- a/bincomparison_mag.ipynb
+++ b/bincomparison_mag.ipynb
@@ -24,16 +24,13 @@
     "    markers = ['o','^','x']  # Example markers\n",
     "    lines = ['-', '--', ':']    # Example line styles\n",
     "\n",
-    "    # Define the number of fmts you want to generate\n",
-    "    #num_fmts  \n",
-    "\n",
     "    # Generate combinations of marker and line styles up to num_fmts\n",
     "    fmts = [f'{marker}{line}' for marker, line in product(markers, lines)] * (num_fmts // len(markers) * len(lines))\n",
     "\n",
     "    # Trim the list to the desired number of fmts\n",
     "    fmts = fmts[:num_fmts]\n",
     "\n",
-    "    return fmts  # Output the list of fmts\n",
+    "    return fmts \n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -116,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
