--- a/plots.ipynb
+++ b/plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -57,11 +57,14 @@
     "\n",
     "    for i in range(len(int_mean)):\n",
     "        ax.errorbar(-meanMag[i],int_mean[i],yerr=int_std[i],c=color,fmt='o')\n",
-    "#ax.axline((1,1),slope=1,c='k',ls=':')\n",
+    "\n",
+    "\n",
     "ax.set_ylabel(r'$<\\int\\omega_Nd\\theta>$')\n",
     "ax.set_xlabel(r'$-K_{\\mathrm{abs}}$')\n",
     "\n",
     "ax.legend(loc=4)\n",
+    "\n",
+    "plt.savefig(f'../data/int_L_nq{nquant}_nbs{nbootstrap}_SinAGNWISEniBPT+Control_noRatio.png')\n",
     "\n",
     "plt.show()\n",
     "\n"
