cuts for randoms

--- a/test_randoms_spatialdistribution.ipynb
+++ b/test_randoms_spatialdistribution.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## No usar este método, es mejor recortar los randoms de todo el cielo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Traer códigos de Filbao para generar randoms con healpix"
    ]
   },
