--- a/plot3_paper1.ipynb
+++ b/plot3_paper1.ipynb
@@ -108,8 +108,8 @@
     "  for idx, col in enumerate(columns):\n",
     "    data[col] = np.array(g[idx])\n",
     "\n",
-    "  data = data[data['v'] > 1200]  # Filter out galaxies with negative cz values\n",
-    "\n",
+    "  data = data[data['v'] > 1200]  \n",
+    "  \n",
     "  # Create ks column for K-band absolute magnitude\n",
     "  from astropy.constants import c\n",
     "  cosmo = FlatLambdaCDM(H0=70 * u.km / u.s / u.Mpc, Om0=0.3)\n",
