--- a/plot1_GLADE_paper1.ipynb
+++ b/plot1_GLADE_paper1.ipynb
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13577/1206302531.py:17: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "/tmp/ipykernel_14519/332981289.py:17: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  for chunk in pd.read_csv(\n"
      ]
     },
@@ -48,7 +48,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remaining galaxies after all cuts: 144134\n"
+      "Remaining galaxies after all cuts: 120725\n",
+      "Min Distance [Mpc]:  14.080665\n",
+      "Max Distance [Mpc]:  188.024585\n",
+      "Min_cz [km/s]:  1200.284397308323\n",
+      "Max_cz [km/s]:  11999.998735755134\n"
      ]
     }
    ],
@@ -85,7 +89,7 @@
     "        chunk[\"cz\"] = c * chunk[\"z_cmb\"]\n",
     "\n",
     "        # Apply the main physical filters\n",
-    "        chunk = chunk[(chunk[\"cz\"] > cz_min) & (chunk[\"d_L\"] < dL_max)]\n",
+    "        chunk = chunk[(chunk[\"cz\"] > cz_min) & (chunk[\"cz\"] < 12000)]\n",
     "\n",
     "        # Compute absolute K magnitude\n",
     "        chunk[\"M_K\"] = chunk[\"K\"] - 5 * np.log10(chunk[\"d_L\"]) - 25\n",
@@ -103,6 +107,10 @@
     "    df[\"M_K\"] = df[\"K\"] - 5 * np.log10(df[\"d_L\"]) - 25\n",
     "\n",
     "    print(f\"Remaining galaxies after all cuts: {len(df)}\")\n",
+    "    print('Min Distance [Mpc]: ', df['d_L'].min())\n",
+    "    print('Max Distance [Mpc]: ', df['d_L'].max())\n",
+    "    print('Min_cz [km/s]: ', df['cz'].min())\n",
+    "    print('Max_cz [km/s]: ', df['cz'].max())\n",
     "\n",
     "    return df\n",
     "\n",
